# marathon-plan

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: aws-microservice-testing.mdc  pytest-best-practices.mdc  terraform.mdc  test-fixture-management.mdc
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  parse_strava_fit.py  parse_strava_gpx.py  processing.py  settings.py  utils.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Results.jsx  UploadForm.jsx
src/: analyze.py  main.py  parse_strava_fit.py  parse_strava_gpx.py  utils.py
